--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   },
   "dependencies": {
     "bootstrap": "^5.2.0",
-    "eslint": "^8.23.0"
+    "eslint": "^8.23.0",
+    "three": "^0.145.0"
   }
 }
